# evals

./: .env.template  .gitmodules  COST_ESTIMATION.md  PULZE_V1_BLOG_POST.md  README.md  cost_cli.py  eval_cli.py  finance-bench-eval.py  import_pulze_v0_1_intent_dataset.py  mmlu-eval-prepare.py  mmlu-eval.py  pulze-request-demo.py  pyproject.toml
evaluators/: __init__.py  base_evaluator.py  financebench_evaluator.py  marketing_evaluator.py  mmlu_evaluator.py  pulze_evaluator.py
marketing/: README.md  benchmark.json
marketing/data/: marketing-marketing.jsonl  marketing-ulta_beauty.jsonl  marketing-writing_marketing_materials.jsonl
marketing/results/: pulze_multi_dimensional_evaluation_anthropicclaude_sonnet_4_0_marketing.jsonl  pulze_multi_dimensional_evaluation_anthropicclaude_sonnet_4_0_ulta_beauty.jsonl  pulze_multi_dimensional_evaluation_anthropicclaude_sonnet_4_0_writing_marketing_materials.jsonl
marketing/templates/: pulze_multi_dimensional_evaluation.json
mmlu/data/: mmlu_abstract_algebra.jsonl  mmlu_anatomy.jsonl  mmlu_astronomy.jsonl  mmlu_business_ethics.jsonl  mmlu_clinical_knowledge.jsonl  mmlu_college_biology.jsonl  mmlu_college_chemistry.jsonl  mmlu_college_computer_science.jsonl  mmlu_college_medicine.jsonl  (+48 more)
pulze-v0.1/: benchmark.json
pulze-v1.0/: README.md  benchmark.json
templates/: academic_assessment_template.json  code_quality_assessment.json  customer_support_quality.json  pulze_multi_dimensional_evaluation.json
tests/: test_cli.py
utils/: __init__.py  config_loader.py  cost_estimator.py  leaderboard_generator.py  results_manager.py
(+506 files in other folders)
