[tool.poetry]
name = "evals"
version = "0.1.0"
description = "Pulze.ai Evaluation Frameworks"
authors = ["Fabian Baier <fabian@pulze.ai>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.67.1"
pandas = "^2.2.3"
requests = "^2.32.3"
openai = "^1.59.3"
datasets = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
