[tool.poetry]
name = "evals"
version = "0.1.0"
description = "Pulze.ai Evaluation Frameworks"
authors = ["Fabian Baier <fabian@pulze.ai>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.67.1"
pandas = "^2.2.3"
requests = "^2.32.3"
openai = "^1.59.3"
datasets = "^3.2.0"
huggingface_hub = "^0.26.0"
numpy = "^1.26.0,<2.0.0"
python-dotenv = "^1.0.0"
colorama = "^0.4.6"
tiktoken = "^0.8.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
